<resources>
    <string name="app_name">3i Summit</string>
    <string name="title_activity_main">3i Summit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Feed">Feedback</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_testimonials">Testimonials</string>

    //UI Strings
    <string name="toast_about">Toast Clicked</string>
    <string name="menu_textview">TextView</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_pic">naruto</string>
    <string name="mobile">Mobile</string>
    <string name="mail">E-Mail</string>
    <string name="name">Name</string>
    <string name="register_image">naruto</string>


    //Alumni Strings
    <string name="timing">Timing</string>
    <string name="parti">Particulars</string>
    <string name="am1">10:00AM - 10:30AM</string>
    <string name="am2">10:30AM - 11:00AM</string>
    <string name="am3">11:00AM - 11:40AM</string>
    <string name="am4">11:40AM - 12:20PM</string>
    <string name="am5">12:30PM - 1:30PM</string>
    <string name="am6">1:30PM - 2:00PM</string>
    <string name="d1">Breakfast</string>
    <string name="d2">Joint Welcome (All Branches) \nat Vishveshwarya Hall.</string>
    <string name="d3">1st Parallel Alumni Sessions \nin respective departments.</string>
    <string name="d4">2nd Parallel Alumni Sessions \nin respective departments</string>
    <string name="d5">Joint Guest Session \nat Vishveshwarya Hall</string>
    <string name="al">Lunch</string>

    //agenda
    <string name="d6">5:30PM-6:00PM</string>
    <string name="d7">6:05PM-6:10PM</string>
    <string name="d8">6:15PM - 6:25PM</string>
    <string name="d9">6:25PM - 6:30PM</string>
    <string name="d10">6:30PM - 6:33PM</string>
    <string name="d11">6:35PM - 6:45PM</string>
    <string name="d12">6:45PM - 6:55PM</string>
    <string name="d13">6:55PM - 7:05PM</string>
    <string name="d14">7:05PM  7:10PM</string>
    <string name="d15">7:10PM - 7:20PM</string>
    <string name="d16">7:20PM - 7:30PM</string>
    <string name="d17">7:30PM - 7:40PM</string>
    <string name="d18">7:40PM - 8:00PM</string>
    <string name="d19">8:00PM - 8:05PM</string>

    <string name="icem">Indira College of Engineering and Management</string>

    //aboutUS Data
    <string name="aboutus">IGI started the Indira International Innovation Summit in 2008 with an aim to promote the Industry – academia linkages to enable the Indira College of Engineering and Management (ICEM), Pune to emerge as a Leading technical manpower source, but today this summit has become a platform for rekindling the power of creativity and innovations which would drive future innovation in the Industry.\n
    We are living in the era of “Digital India” where the entire country is in the process of getting digitalized. \n
        Innovation functions as a stimulus for the growth of the industries and eventually development of the society making people’s lives easier and more comfortable.\n
        We, at ICEM, strongly believe that innovation become a sine qua non for the very survival of any business and therefore nurture a culture of thinking out-of-the-box towards creating a successful career, amongst the students pursuing various professional courses within the institute.\n
        The 9th 3I Summit aimed to offer a great learning experience to the students of Indira and to imbibe the spirit of innovation in them. The wealth of knowledge and experience available at the summit served as a motivation for the young generation at Indira, to realize the value of innovation and to benefit from the presence of ace practitioners.\n
    </string>


    <string name="about_indira">Unrelenting initiatives by the management team at Indira led to adding of multi-disciplines such as Management, Information Technology, Pharmacy, Commerce, Science, Engineering and Mass Communication to the group and growth has been as deep as it has been wide. With 13 institutions, IGI now offers education right from Kindergarten to Doctorate level studies. IGI believes in the economic independence of individuals. In this endeavor we aim to inspire our post graduate students to create a niche for them selves in the Indian Economic order first, and then compete globally. We owe our gratitude to the Indian Industry for consistently collaborating with us in this endeavor. Renowned industrialists have visited us and tremendously enhanced the morale of our students by sharing their vast knowledge and experience about entrepreneurial opportunities and foster a spirit of entrepreneurship amongst students. Having traversed the journey of twenty-one years we have ourselves made certain significant achievements which, we are aware, are but the building blocks for achieving further heights.</string>

    <string name="test">Jagguuuuu</string>

    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>


    <string name="about3i">Indira College of Engineering and Management has been successfully conducting International Summits and HR Awards. We are pleased to announce that this year too, we are organizing Start-up Summit with the theme “Startup India: the Spirit of Entrepreneurship and Employability”. It is rightly said that “A business is simply an idea to make other people’s lives better”. Every new business starts with an insight. Each one of us is gifted with the power to think and change the face of tomorrow. Wherever the person’s interest lies, certainly there is a way to turn it into a thriving business.
</string>
</resources>
