<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAlumniAgenda"
    android:background="@drawable/royalblue_bg2"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>




    <ScrollView
        android:layout_below="@+id/appbarlayout"
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"

        ><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="15dp"
            android:text="@string/am1"
            android:textStyle="bold"
            android:textColor="@color/light_pink"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/d1"
            android:textColor="@color/WHITE"/>
        <!-- just draw a red line -->
        <View
            android:layout_height="2dip"
            android:layout_width="match_parent"
            android:background="@color/WHITE" />




        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="15dp"
            android:text="@string/am2"
            android:textStyle="bold"
            android:textColor="@color/light_pink"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/d2"
            android:textAlignment="center"
            android:textColor="@color/WHITE" />


        <!-- just draw a red line -->
        <View
            android:layout_height="2dip"
            android:layout_width="match_parent"
            android:background="@color/WHITE" />





        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="15dp"
            android:text="@string/am3"
            android:textStyle="bold"
            android:textColor="@color/light_pink"/>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/d3"
            android:textColor="@color/WHITE"/>
        <!-- just draw a red line -->
        <View
            android:layout_height="2dip"
            android:layout_width="match_parent"
            android:background="@color/WHITE" />





        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="15dp"
            android:text="@string/am4"
            android:textStyle="bold"
            android:textColor="@color/light_pink"/>
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/d4"
            android:textColor="@color/WHITE"/>
        <!-- just draw a red line -->
        <View
            android:layout_height="2dip"
            android:layout_width="match_parent"
            android:background="@color/WHITE" />





        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="15dp"
            android:text="@string/am5"
            android:textStyle="bold"
            android:textColor="@color/light_pink"/>
        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/d5"
            android:textColor="@color/WHITE"/>
        <!-- just draw a red line -->
        <View
            android:layout_height="2dip"
            android:layout_width="match_parent"
            android:background="@color/WHITE" />

    </LinearLayout>


    </ScrollView>



</RelativeLayout>
