<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background7"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout


    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/igi"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignEnd="@+id/textView21"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="82dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/main_page_but"
        android:elevation="@dimen/cardview_default_elevation"
        android:text="About 3i Summit"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="21sp"
        android:backgroundTint="@color/Purple"/>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView22"
        android:layout_below="@+id/igi"
        android:padding="10dp"
        android:text="@string/about3i"
        android:textAlignment="textStart"
        android:textColor="@color/WHITE"
        android:textSize="18sp" />

    <Button
        android:id="@+id/indira"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView21"
        android:layout_marginLeft="82dp"
        android:background="@drawable/mainpagebut2"
        android:elevation="@dimen/cardview_default_elevation"
        android:text="About Indira Group of Institues(IGI)"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:backgroundTint="@color/Purple"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView23"
        android:layout_below="@+id/indira"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/aboutus"
        android:textAlignment="textStart"
        android:textColor="@color/WHITE"
        android:textSize="18sp" />


        <Button
            android:id="@+id/icem"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView22"
            android:layout_marginTop="18dp"
            android:background="@drawable/main_page_but"
            android:backgroundTint="@color/Purple"
            android:elevation="@dimen/cardview_default_elevation"
            android:text="About Indira College Of Engineering and Mgmt.(ICEM)"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView23"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/icem"
            android:padding="10dp"
            android:text="@string/about_indira"
            android:textAlignment="textStart"
            android:textColor="@color/WHITE"
            android:textSize="18sp" />

</RelativeLayout>
    </ScrollView>


</RelativeLayout>